--- a/react/03-intro-to-react/digital-card-react/package.json
+++ b/react/03-intro-to-react/digital-card-react/package.json
@@ -2,6 +2,9 @@
   "name": "digital-card-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "author": "",
+  "description": "",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
